--- a/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="logo">
                     <a href="index.html" title="Flavours HTML">
-                        <div><img src="images/logo.png" alt="Flavours Store"></div>
+                        <div><img src="~/assets/images/logo.png" alt="Flavours Store"></div>
                     </a>
                 </div>
                 <div class="fl-nav-menu">
@@ -158,7 +158,7 @@
                                                 </div>
                                                 <!--col-1-->
                                                 <div class="col-2">
-                                                    <div class="menu_image"><a title="" href="grid.html"><img alt="menu_image" src="images/menu-bag.png"></a></div>
+                                                    <div class="menu_image"><a title="" href="grid.html"><img alt="menu_image" src="~/assets/images/menu-bag.png"></a></div>
 
                                                 </div>
                                                 <!--col-2-->
@@ -286,19 +286,19 @@
                                                 <!--nav-block nav-block-center-->
                                                 <div class="nav-add">
                                                     <div class="push_item">
-                                                        <div class="push_img"><a href="#"><img src="images/menu-img.png" alt="menu item 1"></a></div>
+                                                        <div class="push_img"><a href="#"><img src="~/assets/images/menu-img.png" alt="menu item 1"></a></div>
 
                                                     </div>
                                                     <div class="push_item">
-                                                        <div class="push_img"><a href="#"><img src="images/menu-img.png" alt="menu item 2"></a></div>
+                                                        <div class="push_img"><a href="#"><img src="~/assets/images/menu-img.png" alt="menu item 2"></a></div>
 
                                                     </div>
                                                     <div class="push_item">
-                                                        <div class="push_img"><a href="#"><img src="images/menu-img.png" alt="menu item 3"></a></div>
+                                                        <div class="push_img"><a href="#"><img src="/assets/images/menu-img.png" alt="menu item 3"></a></div>
 
                                                     </div>
                                                     <div class="push_item push_item_last">
-                                                        <div class="push_img"><a href="#"><img src="images/menu-img.png" alt="menu item 4"></a></div>
+                                                        <div class="push_img"><a href="#"><img src="/assets/images/menu-img.png" alt="menu item 4"></a></div>
 
                                                     </div>
                                                 </div>
@@ -479,23 +479,23 @@
                                             <div class="header-nav-dropdown-wrapper clearer">
                                                 <div class="grid12-3">
 
-                                                    <div><img src="images/custom-block.png" alt="custom-image"></div>
+                                                    <div><img src="~/assets/images/custom-block.png" alt="custom-image"></div>
                                                     <h4 class="heading">SALE UP TO 30% OFF</h4>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                                 </div>
                                                 <div class="grid12-3">
 
-                                                    <div><img src="images/custom-block.png" alt="custom-image"></div>
+                                                    <div><img src=""~/assets/images/custom-block.png" alt="custom-image"></div>
                                                     <h4 class="heading">SALE UP TO 30% OFF</h4>
                                                     <p>Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
                                                 </div>
                                                 <div class="grid12-3">
-                                                    <div><img src="images/custom-block.png" alt="custom-image"></div>
+                                                    <div><img src=""~/assets/images/custom-block.png" alt="custom-image"></div>
                                                     <h4 class="heading">SALE UP TO 30% OFF</h4>
                                                     <p>Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
                                                 </div>
                                                 <div class="grid12-3">
-                                                    <div><img src="images/custom-block.png" alt="custom-image"></div>
+                                                    <div><img src=""~/assets/images/custom-block.png" alt="custom-image"></div>
                                                     <h4 class="heading">SALE UP TO 30% OFF</h4>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                                 </div>
@@ -518,9 +518,9 @@
                             <div class="language-currency">
                                 <div class="fl-language">
                                     <ul class="lang">
-                                        <li><a href="#"> <img src="images/english.png" alt="English"> <span>English</span> </a></li>
-                                        <li><a href="#"> <img src="images/francais.png" alt="French"> <span>French</span> </a></li>
-                                        <li><a href="#"> <img src="images/german.png" alt="German"> <span>German</span> </a></li>
+                                        <li><a href="#"> <img src="~/assets/images/english.png" alt="English"> <span>English</span> </a></li>
+                                        <li><a href="#"> <img src="~/assets/images/francais.png" alt="French"> <span>French</span> </a></li>
+                                        <li><a href="#"> <img src="~/assets/images/german.png" alt="German"> <span>German</span> </a></li>
                                     </ul>
                                 </div>
                                 <!--fl-language-->
@@ -559,7 +559,7 @@
                             <ul class="mini-products-list" id="cart-sidebar">
                                 <li class="item first">
                                     <div class="item-inner">
-                                        <a class="product-image" title="timi &amp; leslie Sophia Diaper Bag, Lemon Yellow/Shadow White" href="#l"><img alt="timi &amp; leslie Sophia Diaper Bag, Lemon Yellow/Shadow White" src="images/product-img.jpg"></a>
+                                        <a class="product-image" title="timi &amp; leslie Sophia Diaper Bag, Lemon Yellow/Shadow White" href="#l"><img alt="timi &amp; leslie Sophia Diaper Bag, Lemon Yellow/Shadow White" src=""~/assets/images/product-img.jpg"></a>
                                         <div class="product-details">
                                             <div class="access"><a class="btn-remove1" title="Remove This Item" href="#">Remove</a> <a class="btn-edit" title="Edit item" href="#"><i class="icon-pencil"></i><span class="hidden">Edit item</span></a> </div>
                                             <!--access-->
@@ -570,7 +570,7 @@
                                 </li>
                                 <li class="item last">
                                     <div class="item-inner">
-                                        <a class="product-image" title="JP Lizzy Satchel Designer Diaper Bag - Slate Citron" href="#"><img alt="JP Lizzy Satchel Designer Diaper Bag - Slate Citron" src="images/product-img.jpg"></a>
+                                        <a class="product-image" title="JP Lizzy Satchel Designer Diaper Bag - Slate Citron" href="#"><img alt="JP Lizzy Satchel Designer Diaper Bag - Slate Citron" src=""~/assets/images/product-img.jpg"></a>
                                         <div class="product-details">
                                             <div class="access"><a class="btn-remove1" title="Remove This Item" href="#">Remove</a> <a class="btn-edit" title="Edit item" href="#"><i class="icon-pencil"></i><span class="hidden">Edit item</span></a> </div>
                                             <!--access-->
