--- a/BDS_04_BatDongSan_MultiLand/assets/css/style.css
+++ b/BDS_04_BatDongSan_MultiLand/assets/css/style.css
@@ -5171,6 +5171,7 @@ span.notify-right{
     overflow: hidden;
 }
 .post-thumb{
-    max-height:300px;
+    max-height:200px;
     overflow:hidden;
 }
+.entry-detail img{max-width:100%;}
