--- a/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -65,23 +65,23 @@
                                             <div class="header-nav-dropdown-wrapper clearer">
                                                 <div class="grid12-3">
 
-                                                    <div><img src="images/custom-block.png" alt="custom-image"></div>
+                                                    <div><img src="/assets/images/custom-block.png" alt="custom-image"></div>
                                                     <h4 class="heading">SALE UP TO 30% OFF</h4>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                                 </div>
                                                 <div class="grid12-3">
 
-                                                    <div><img src="images/custom-block.png" alt="custom-image"></div>
+                                                    <div><img src="/assets/images/custom-block.png" alt="custom-image"></div>
                                                     <h4 class="heading">SALE UP TO 30% OFF</h4>
                                                     <p>Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
                                                 </div>
                                                 <div class="grid12-3">
-                                                    <div><img src="images/custom-block.png" alt="custom-image"></div>
+                                                    <div><img src="/assets/images/custom-block.png" alt="custom-image"></div>
                                                     <h4 class="heading">SALE UP TO 30% OFF</h4>
                                                     <p>Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
                                                 </div>
                                                 <div class="grid12-3">
-                                                    <div><img src="images/custom-block.png" alt="custom-image"></div>
+                                                    <div><img src="/assets/images/custom-block.png" alt="custom-image"></div>
                                                     <h4 class="heading">SALE UP TO 30% OFF</h4>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                                 </div>
@@ -121,7 +121,7 @@
                             <ul class="mini-products-list" id="cart-sidebar">
                                 <li class="item first">
                                     <div class="item-inner">
-                                        <a class="product-image" title="timi &amp; leslie Sophia Diaper Bag, Lemon Yellow/Shadow White" href="#l"><img alt="timi &amp; leslie Sophia Diaper Bag, Lemon Yellow/Shadow White" src="images/product-img.jpg"></a>
+                                        <a class="product-image" title="timi &amp; leslie Sophia Diaper Bag, Lemon Yellow/Shadow White" href="#l"><img alt="timi &amp; leslie Sophia Diaper Bag, Lemon Yellow/Shadow White" src="/assets/images/product-img.jpg"></a>
                                         <div class="product-details">
                                             <div class="access"><a class="btn-remove1" title="Remove This Item" href="#">Remove</a> <a class="btn-edit" title="Edit item" href="#"><i class="icon-pencil"></i><span class="hidden">Edit item</span></a> </div>
                                             <!--access-->
@@ -132,7 +132,7 @@
                                 </li>
                                 <li class="item last">
                                     <div class="item-inner">
-                                        <a class="product-image" title="JP Lizzy Satchel Designer Diaper Bag - Slate Citron" href="#"><img alt="JP Lizzy Satchel Designer Diaper Bag - Slate Citron" src="images/product-img.jpg"></a>
+                                        <a class="product-image" title="JP Lizzy Satchel Designer Diaper Bag - Slate Citron" href="#"><img alt="JP Lizzy Satchel Designer Diaper Bag - Slate Citron" src="/assets/images/product-img.jpg"></a>
                                         <div class="product-details">
                                             <div class="access"><a class="btn-remove1" title="Remove This Item" href="#">Remove</a> <a class="btn-edit" title="Edit item" href="#"><i class="icon-pencil"></i><span class="hidden">Edit item</span></a> </div>
                                             <!--access-->
