--- a/BDS_04_BatDongSan_MultiLand/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/BDS_04_BatDongSan_MultiLand/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -13,7 +13,7 @@
             <a href="/"><img alt="@commonInfo.Desc" src="@commonInfo.Logo" /></a>
         </div>
         <div class="col-xs-7 col-sm-8 col-md-9">
-
+            @Html.Partial("_partial/_HomeSlide_2")
         </div>
      
     </div>
