--- a/BDS_04_BatDongSan_MultiLand/Views/Product/Category.cshtml
+++ b/BDS_04_BatDongSan_MultiLand/Views/Product/Category.cshtml
@@ -34,7 +34,7 @@
                                     <span>list</span>
                                 </li>
                             </ul>
-                            <ul class="row product-list grid">
+                            <ul class="row product-list list">
                                 @foreach (AnperoFrontend.WebService.ProductItem item in productList.Item)
                                 {
                                     <li class="col-sx-12 col-sm-4">
@@ -55,7 +55,7 @@
                                                     <a title="Quick view" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)"></a>
                                                 </div>
                                                 <div class="add-to-cart">
-                                                    <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">thêm vào giỏ hàng</a>
+                                                    <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')"> Liên hệ tư vấn</a>
                                                 </div>
                                             </div>
                                             <div class="right-block">
