--- a/BDS_04_BatDongSan_MultiLand/assets/css/option5.css
+++ b/BDS_04_BatDongSan_MultiLand/assets/css/option5.css
@@ -170,7 +170,7 @@
 }
 
 .option5 .nav-top-menu.nav-ontop{
-	background: #39b54a;
+	background: #60a5d8;
 	height: 51px;
 }
 .option5 #form-search-opntop .btn-search .fa{
@@ -183,7 +183,7 @@
 
 .option5 #main-menu .navbar{
 	border-radius: 0;
-	background: #39b54a;
+	background: #60a5d8;
 }
 .option5 #main-menu .navbar-default .navbar-nav>li>a{
 	color: #fff;
@@ -195,7 +195,7 @@
 .option5 #main-menu .navbar .navbar-nav>li:hover, 
 .option5 #main-menu .navbar .navbar-nav>li.active{
 	background-image: none;
-	background: #2ba53c;
+	background: #5f93b9;
 }
 .option5 #main-menu .navbar .navbar-nav>li:hover a, 
 .option5 #main-menu .navbar .navbar-nav>li.active a{
@@ -223,8 +223,7 @@
 	border-right: 1px solid #eaeaea;
 }
 .option5 #main-menu{
-	width: 100%;
-	padding: 0 15px;
+	width: 100%;	
 	margin: 0;
 	padding-left: 15px;
 	margin-top: -1px;
@@ -692,9 +691,7 @@
 .option5 .product-list li .add-to-cart:hover{
 	opacity: 1;
 }
-.option5 .product-list li .add-to-cart a {
-	  background: url("/assets/images/icon-cart-option2.png") no-repeat left center;
-}
+
 .option5 .product-list li .quick-view a.compare:before{
 	  content: "\f066";
 }
