--- a/Shop_01_multiProduct/Views/Shared/_Layout.cshtml
+++ b/Shop_01_multiProduct/Views/Shared/_Layout.cshtml
@@ -103,33 +103,33 @@
                                                 if (commonInfo.MenuList[i].ChidMenu != null && commonInfo.MenuList[i].ChidMenu.Length > 0)
                                                 {
 
-                                                    <li class="dropdown">
-                                                        <a href="@commonInfo.MenuList[i].Link" data-toggle="dropdown">@commonInfo.MenuList[i].Tittle</a>
-                                                        <ul class="dropdown-menu container-fluid">
-                                                            <li class="block-container">
-                                                                <ul class="block">
-                                                                    @for (int j = 0; j < commonInfo.MenuList[i].ChidMenu.Length; j++)
+                                        <li class="dropdown">
+                                            <a href="@commonInfo.MenuList[i].Link" data-toggle="dropdown">@commonInfo.MenuList[i].Tittle</a>
+                                            <ul class="dropdown-menu container-fluid">
+                                                <li class="block-container">
+                                                    <ul class="block">
+                                                        @for (int j = 0; j < commonInfo.MenuList[i].ChidMenu.Length; j++)
 
                                                                     {
-                                                                        <li class="link_container"><a href="@commonInfo.MenuList[i].ChidMenu[j].Link">@commonInfo.MenuList[i].ChidMenu[j].Tittle</a></li>
+                                                                    <li class="link_container"><a href="@commonInfo.MenuList[i].ChidMenu[j].Link">@commonInfo.MenuList[i].ChidMenu[j].Tittle</a></li>
                                                                     }
-                                                                </ul>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </li>
                                                 }
                                                 else
                                                 {
-                                                    <li>
-                                                        <a href="@commonInfo.MenuList[i].Link">@commonInfo.MenuList[i].Tittle</a>
-                                                    </li>
+                                        <li>
+                                            <a href="@commonInfo.MenuList[i].Link">@commonInfo.MenuList[i].Tittle</a>
+                                        </li>
                                                 }
                                             }
                                         }
                                         <li><a href="/blog">Blogs</a></li>
                                     </ul>
                                     <ul class="nav navbar-nav navbar-right">
-                                        <li><a class="link-buytheme" href="tel:@commonInfo.HotLine"> <strong>Đặt hàng: @commonInfo.HotLine</strong> </a></li>
+                                        <li><a class="link-buytheme" href="tel:@commonInfo.HotLine"> <strong>Đặt hàng: @commonInfo.HotLine - 0961614240</strong> </a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -180,81 +180,100 @@
                             }
 
                         </div>
+                        @if (!string.IsNullOrEmpty(commonInfo.Skype) || !string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                        {
+                            string thisUrl = HttpContext.Current.Request.Url.AbsoluteUri;
+                            <div class="introduce-title" style="margin-top:10px;">Chia sẻ với bạn bè</div>
+                            <div class="social-link">
+                                @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                                {
+                                    <a href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" target="_blank"><i class="fa fa-facebook"></i></a>
+                                }
+                                @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                                {
+                                    <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
+                                }
+                                
+                                <a href="https://plus.google.com/share?url=@thisUrl" target="_blank"><i class="fa fa-google-plus"></i></a>
+                                <a href="http://pinterest.com/pinthis?url=@thisUrl" target="_blank"><i class="fa fa-pinterest-p"></i></a>
+                                <a href="http://www.twitter.com/share?url=@thisUrl" target="_blank"><i class="fa fa-twitter"></i></a>
+                            </div>
+                        }
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="introduce-title">Thực phẩm sạch</div>
-                            <ul id="introduce-company" class="introduce-list">
-                                <li><a href="#" alter="Rau sạch, rau hữu cơ">Rau sạch, rau hữu cơ</a></li>
-                                <li><a href="#">Hoa quả sạch</a></li>
-                                <li><a href="#">Thịt lợn sạch</a></li>
-                                <li><a href="#">Thịt bò sạch</a></li>
-                                <li><a href="#">Thịt gà ta</a></li>
-                                <li><a href="#">Rau rừng</a></li>
-                            </ul>
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="introduce-title">Danh mục chính</div>
+                                @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
+                                {
+                                    <ul id="introduce-company" class="introduce-list">
+                                        @foreach (var item in commonInfo.ProductCategoryList)
+                                        {
+                                            <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" alter="@item.Name">@item.Name</a></li>
+                                        }
+                                    </ul>
+                                }
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                    </div>
+                    <div class="col-md-4">
+                        <div id="contact-box" style="text-align: right;">
+                            @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                            {
+
+                                <div class="fb-page"
+                                     data-tabs="messages"
+                                     data-href="@Html.Raw(commonInfo.FaceBookLink)"
+                                     data-width="500"
+                                     data-height="300"
+                                     data-hide-cover="false"></div>
+                            }
+
                         </div>
 
                     </div>
                 </div>
-                <div class="col-md-4">
-                </div>
-                <div class="col-md-4">
-                    <div id="contact-box" style="text-align: right;">
-                        @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
-                        {
 
-                            <div class="fb-page"
-                                 data-tabs="messages"
-                                 data-href="@Html.Raw(commonInfo.FaceBookLink)"
-                                 data-width="500"
-                                 data-height="300"
-                                 data-hide-cover="false"></div>
-                        }
+                <div id="footer-menu-box">
+                    <div class="col-sm-12">
+                        <ul class="footer-menu-list">
+                            <li><a href="/gioi-thieu-b76">Giới thiệu về chúng tôi</a></li>
+                            @*<li><a href="/home/about">Giới thiệu về chúng tôi</a></li>*@
+                        </ul>
+                    </div>
+                    <div class="col-sm-12">
+                        <ul class="footer-menu-list">
+                            <li><a href="/chinh-sach-van-chuyen-a66">Chính sách vận chuyển</a></li>
+                            <li><a href="/chinh-sach-doi-tra-a67">Chính sách đổi trả</a></li>
+                            <li><a href="/huong-dan-thanh-toan-a68">Hướng dẫn thanh toán</a></li>
+                            @*<li><a href="/policy/ship">Chính sách vận chuyển</a></li>
+                                <li><a href="/policy/rollback">Chính sách đổi trả</a></li>
+                                <li><a href="/policy/payment">Hướng dẫn thanh toán</a></li>*@
 
+                            <li><a href="/home/contact">Liên hệ</a></li>
+
+                        </ul>
                     </div>
 
+                    <p class="text-center">Copyrights © 2017 <a href="http://camcanhbuoidien.com">Cam Canh Buoi Dien</a>. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpro">Anpero.com</a></p>
                 </div>
             </div>
-
-            <div id="footer-menu-box">
-                <div class="col-sm-12">
-                    <ul class="footer-menu-list">
-                        <li><a href="/gioi-thieu-b76">Giới thiệu về chúng tôi</a></li>
-                        @*<li><a href="/home/about">Giới thiệu về chúng tôi</a></li>*@
-                    </ul>
-                </div>
-                <div class="col-sm-12">
-                    <ul class="footer-menu-list">
-                        <li><a href="/chinh-sach-van-chuyen-a66">Chính sách vận chuyển</a></li>
-                        <li><a href="/chinh-sach-doi-tra-a67">Chính sách đổi trả</a></li>
-                        <li><a href="/huong-dan-thanh-toan-a68">Hướng dẫn thanh toán</a></li>
-                        @*<li><a href="/policy/ship">Chính sách vận chuyển</a></li>
-                            <li><a href="/policy/rollback">Chính sách đổi trả</a></li>
-                            <li><a href="/policy/payment">Hướng dẫn thanh toán</a></li>*@
-
-                        <li><a href="/home/contact">Liên hệ</a></li>
-
-                    </ul>
-                </div>
-
-                <p class="text-center">Copyrights © 2017 <a href="http://camcanhbuoidien.com">Cam Canh Buoi Dien</a>. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpro">Anpero.com</a></p>
-            </div>
-        </div>
-    </footer>
-    <div id="fb-root"></div>
-    <script>
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.9";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-        $(window).load(function () {
-            Cart.bindCart();
-        });
-    </script>
-</body>
+        </footer>
+        <div id="fb-root"></div>
+        <script>
+            (function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.9";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+            $(window).load(function () {
+                Cart.bindCart();
+            });
+        </script>
+    </body>
 </html>
